@@ -1,13 +1,17 @@
 package ooo.foooooooooooo.yep;
 
-import ooo.foooooooooooo.yep.messages.IYepMessage;
+import ooo.foooooooooooo.yep.api.YepApi;
+import ooo.foooooooooooo.yep.api.YepMessage;
 import org.bukkit.entity.Player;
 
 import java.nio.charset.StandardCharsets;
 
 public class PluginMessenger {
-    public static void sendMessage(Player player, IYepMessage message) {
-        String msg = String.format("%s:%s:%s", player.getName(), message.getType().name(), message);
-        player.sendPluginMessage(Yep.instance, "velocity:yep", msg.getBytes(StandardCharsets.UTF_8));
-    }
+  public static void sendMessage(Player player, YepMessage message) {
+    Yep.logger.finest("sending `%s` for player `%s`".formatted(message, message.player));
+
+    var serialized = YepApi.serializeMessage(message);
+
+    player.sendPluginMessage(Yep.instance, "velocity:yep", serialized.getBytes(StandardCharsets.UTF_8));
+  }
 }
